tests/parse_print/parsing01/stderr.expected
Error:
    tests/parse_print/parsing01/parsing01.essence:3:15:
unexpected end of input
expecting ), expression, or range
    given g : int(
                  ^